--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,7 @@ p {
   border: none;
   background-color: transparent;
   border-bottom: 1px solid #5a524e;
+  box-shadow: none !important;
   height: 25px;
   font-size: 1rem;
 }
@@ -160,6 +161,7 @@ p {
   background-color: #332c29;
   box-shadow: none;
   outline: none;
+  border: none;
   opacity: 0;
   transform: scale(1);
   pointer-events: none;
